.metadata/.plugins/org.eclipse.cdt.ui/first_working_Blinky.build.log
13:34:59 **** Incremental Build of configuration Debug for project first_working_Blinky ****
make all 
Building file: ../src/main.c
Invoking: MCU GCC Compiler
/media/data/CODES/sw4stm32_workbench/first_working_Blinky/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=c11 -DSTM32F429ZITx -DSTM32F429I_DISC1 -DSTM32F4 -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F429_439xx -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib" -I"/media/data/CODES/sw4stm32_workbench/first_working_Blinky/inc" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/CMSIS/device" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/CMSIS/core" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/StdPeriph_Driver/inc" -O2 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
Finished building: ../src/main.c
 
Building file: ../src/syscalls.c
Invoking: MCU GCC Compiler
/media/data/CODES/sw4stm32_workbench/first_working_Blinky/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=c11 -DSTM32F429ZITx -DSTM32F429I_DISC1 -DSTM32F4 -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F429_439xx -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib" -I"/media/data/CODES/sw4stm32_workbench/first_working_Blinky/inc" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/CMSIS/device" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/CMSIS/core" -I"/media/data/CODES/sw4stm32_workbench/stm32f429i-disc1_stdperiph_lib/StdPeriph_Driver/inc" -O2 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/syscalls.d" -MT"src/syscalls.o" -o "src/syscalls.o" "../src/syscalls.c"
../src/syscalls.c:63:27: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'asm'
 register char * stack_ptr asm("sp");
                           ^
../src/syscalls.c: In function '_sbrk':
../src/syscalls.c:116:18: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'asm'
  extern char end asm("end");
                  ^
../src/syscalls.c:116:18: warning: implicit declaration of function 'asm' [-Wimplicit-function-declaration]
../src/syscalls.c:121:15: error: 'end' undeclared (first use in this function)
   heap_end = &end;
               ^
../src/syscalls.c:121:15: note: each undeclared identifier is reported only once for each function it appears in
../src/syscalls.c:124:24: error: 'stack_ptr' undeclared (first use in this function)
  if (heap_end + incr > stack_ptr)
                        ^
src/subdir.mk:24: recipe for target 'src/syscalls.o' failed
make: *** [src/syscalls.o] Error 1

13:34:59 Build Finished (took 214ms)

